API call to randomUser API and render to DOM

--- a/index.html
+++ b/index.html
@@ -8,16 +8,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div>
-        <div id="test-user" class="user">
-            <div class="profile-image">
-                <img src="https://randomuser.me/api/portraits/men/8.jpg"/>
-            </div>
-            <div class="first-name">Alexander</div>
-            <div class="last-name">Kristensen</div>
-            <div class="email">alexander.kristensen@example.com</div>
-            <div class="phone">98708762</div>
-        </div>
+    <div id="user-list">
     </div>
 </body>
 </html>
